# PictLogger

./: build.sh
examples/: a.py  exampleCpp  exampleCpp.cpp  examplePy.py
python_library/: build-lib.sh  pyproject.toml  readme.md  setup.py  upload.sh  uploadt.sh
python_library/.eggs/: atomicwrites-1.4.1-py3.10.egg
python_library/pictlogger.egg-info/: PKG-INFO  SOURCES.txt
src/: l.cpp  logger.cpp  logger.h  logger.hpp  python.cpp
src/unrealized/: compression.hpp
src/unrealized/minilzo/: testmini
