[project]
name = "pictlogger"
version = "0.0.1"
authors = [
  { name="Ilya Dudelzak", email="DIA070611@gmail.com" },
]
description = "Simple logger writen in c++"
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux :: MacOS",
]

[project.urls]
"Homepage" = "https://github.com/IlyaDudelzak/PictLogger"
"Bug Tracker" = "https://github.com/IlyaDudelzak/PictLogger/issues"
